完善DefaultMap；实现小人自由走动的逻辑；实现小人停留时，周边建筑营销拉人的逻辑。
Signed-off-by: Jerin Lee <taurenjerin@qq.com>

--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "template-vue-ts",
+    "name": "save-up",
     "description": "A Phaser 3 TypeScript project template that demonstrates Vue communication and uses Vite for bundling.",
     "version": "1.3.0",
     "repository": {
